JDK 11 tweak